--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -42,7 +42,7 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
-    --radius: 0.2rem;
+    --radius: 0.1rem;
 
     --success: 196 52% 74%;
     --warning: 34 89% 85%;
@@ -89,7 +89,10 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground min-h-[100vh] flex flex-col;
+    @apply min-h-screen w-full bg-background text-foreground relative;
+  }
+  body > * {
+    @apply relative z-[1];
   }
 }
 
