--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -112,3 +112,14 @@ html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
