--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -123,6 +123,26 @@ html[data-theme='light'] {
   opacity: initial;
 }
 
+/* Fluid Responsive: https://finsweet.com/client-first/docs/fluid-responsive */
+html {
+  font-size: calc(0.625rem + 0.41666666666666663vw);
+}
+@media screen and (max-width: 1920px) {
+  html {
+    font-size: calc(0.625rem + 0.41666666666666674vw);
+  }
+}
+@media screen and (max-width: 1440px) {
+  html {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  html {
+    font-size: calc(0.7494769874476988rem + 0.8368200836820083vw);
+  }
+}
+
 @layer base {
   * {
     @apply border-border;
